fix: correct hero contact button label and icon, and resolve duplicate translation keys

--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Miller's Portfolio</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Miller A. Rocha | Senior Frontend Architect & Mechatronics Engineer</title>
+    <meta name="title" content="Miller A. Rocha | Senior Frontend Architect & Mechatronics Engineer" />
+    <meta name="description"
+        content="Portfolio of Miller A. Rocha, a Senior Frontend Architect and Mechatronics Engineer specialized in React, TypeScript, and Robotics. Discover projects in Fintech, IoT, and Automation." />
+    <meta name="keywords"
+        content="Miller Rocha, Frontend Architect, Mechatronics Engineer, React, TypeScript, Robotics, Portfolio, Web Development, Automation, IoT, BBVA GLOMO, Cells Framework" />
+    <meta name="author" content="Miller A. Rocha" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://millerarocha.com/" />
+    <meta property="og:title" content="Miller A. Rocha | Senior Frontend Architect & Mechatronics Engineer" />
+    <meta property="og:description"
+        content="Portfolio of Miller A. Rocha, a Senior Frontend Architect and Mechatronics Engineer specialized in React, TypeScript, and Robotics." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://millerarocha.com/" />
+    <meta property="twitter:title" content="Miller A. Rocha | Senior Frontend Architect & Mechatronics Engineer" />
+    <meta property="twitter:description"
+        content="Portfolio of Miller A. Rocha, a Senior Frontend Architect and Mechatronics Engineer specialized in React, TypeScript, and Robotics." />
+    <meta property="twitter:image" content="/og-image.png" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
